Fix h1 alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ h1, h2 {
     font-family: 'Kanit', sans-serif;
     color: black;
     font-size: 280%;
-    margin: 0;
+    margin-left: 30px;
     text-align: center;
     background-color: rgba(0, 156, 26, 0.5);
 }
@@ -123,19 +123,13 @@ a {
 
 /* media query */
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
     #logo {
-        width: 65%;
+        width: 100%;
     }
-
-    #nav-bar {
-        padding: 30px 0;
+    .nav {
+        display: flex;
     }
-
-    .form-section {
-        margin: auto;
-    }
-
 }
 
 /* Contact Form */
